refactor(WinningNumbers): toList 방식 변경